# serializer version: 1
# name: test_extract_snapshot_average
  dict({
    'blue': 0.39258658926976125,
    'blue_std': 0.14058162590331652,
    'cita': 5.108862232771542,
    'cita_std': 45.783523713671514,
    'green': 0.4596805985992942,
    'green_std': 0.11595653465483254,
    'hue': 20.592885891606027,
    'hue_std': 71.28570685584526,
    'ita': 8.11241643220028,
    'ita_std': 45.34776970450102,
    'lab_a': 0.22817850410144763,
    'lab_a_std': 3.9823243856886306,
    'lab_b': 10.769957829575368,
    'lab_b_std': 7.401241639723248,
    'lum': 49.368036017412365,
    'lum_std': 11.93167927985044,
    'red': 0.48977307826269806,
    'red_std': 0.12359386222698164,
  })
# ---
# name: test_extract_snapshot_krishnapriya
  dict({
    'blue': 0.3081298508955549,
    'cita': -21.477870616519493,
    'diagnostics': dict({
      'filter_frac': 0.2584890285015805,
      'n_pixels': 78667,
    }),
    'green': 0.3958503665363887,
    'hue': 76.39050071194713,
    'ita': -21.477870616519493,
    'lab_a': 3.729421967587687,
    'lab_b': 15.404407706519708,
    'lum': 43.93891421913617,
    'red': 0.46772379080154386,
  })
# ---
# name: test_extract_snapshot_merler
  dict({
    'blue': 0.47573669317021755,
    'blue_std': 0.10940410281839831,
    'cita': 19.655670783101566,
    'cita_std': 51.639185242591736,
    'diagnostics': dict({
      'region_bounds': list([
        tuple(
          tuple(
            164,
            372,
          ),
          tuple(
            146,
            512,
          ),
        ),
        tuple(
          tuple(
            164,
            372,
          ),
          tuple(
            512,
            745,
          ),
        ),
        tuple(
          tuple(
            372,
            581,
          ),
          tuple(
            146,
            512,
          ),
        ),
        tuple(
          tuple(
            372,
            581,
          ),
          tuple(
            512,
            745,
          ),
        ),
      ]),
      'region_sizes': list([
        52830,
        40210,
        62584,
        33333,
      ]),
      'total_pixels': 188957,
    }),
    'green': 0.5268705654760313,
    'green_std': 0.09545656742171126,
    'hue': 65.68432264841385,
    'hue_std': 4.607300436177647,
    'ita': 19.675269765940786,
    'ita_std': 48.902815804164305,
    'lab_a': 1.3400396786926227,
    'lab_a_std': 1.860224673823882,
    'lab_b': 7.2953866506986795,
    'lab_b_std': 2.6534797188254142,
    'lum': 56.06572772850886,
    'lum_std': 9.058698662369892,
    'red': 0.5314325132320602,
    'red_std': 0.11508025579582294,
  })
# ---
# name: test_extract_snapshot_merler_nonsmooth_avg
  dict({
    'blue': 112.32534386130177,
    'blue_std': 17.951208249170406,
    'cita': 15.264435944696935,
    'cita_std': 32.7882293024946,
    'diagnostics': dict({
      'region_bounds': list([
        tuple(
          tuple(
            164,
            372,
          ),
          tuple(
            146,
            512,
          ),
        ),
        tuple(
          tuple(
            164,
            372,
          ),
          tuple(
            512,
            745,
          ),
        ),
        tuple(
          tuple(
            372,
            581,
          ),
          tuple(
            146,
            512,
          ),
        ),
        tuple(
          tuple(
            372,
            581,
          ),
          tuple(
            512,
            745,
          ),
        ),
      ]),
      'region_sizes': list([
        52830,
        40210,
        62584,
        33333,
      ]),
      'total_pixels': 188957,
    }),
    'green': 123.91845234630101,
    'green_std': 17.29010744313991,
    'hue': 37.33040807610395,
    'hue_std': 14.96584996249815,
    'ita': 19.307735574665415,
    'ita_std': 23.276200495122033,
    'lab_a': 0.9817164819434936,
    'lab_a_std': 1.635425648805309,
    'lab_b': 7.551253317427368,
    'lab_b_std': 0.7361880092274128,
    'lum': 52.126877480066284,
    'lum_std': 7.245316492369242,
    'red': 131.20375005953736,
    'red_std': 21.76452244882815,
  })
# ---
# name: test_extract_snapshot_mode
  dict({
    'blue': 0.2,
    'cita': -36.00009254757575,
    'green': 0.36,
    'hue': 80.99956121564693,
    'ita': -36.00009254757575,
    'lab_a': 1.6756546053227623,
    'lab_b': 6.158236609761854,
    'lum': 40.946752869796555,
    'red': 0.6,
  })
# ---
# name: test_extract_snapshot_thong
  dict({
    'blue': 0.49422379449732085,
    'blue_std': 0.05594368471803509,
    'cita': 54.252207458317336,
    'cita_std': 16.834894838739412,
    'green': 0.5587551551471699,
    'green_std': 0.0595759276093664,
    'hue': 27.9874036146538,
    'hue_std': 68.11535999823427,
    'ita': 56.59046833045702,
    'ita_std': 12.699870095061462,
    'lab_a': 0.6421512575989494,
    'lab_a_std': 1.0049845697630662,
    'lab_b': 4.800789388688733,
    'lab_b_std': 2.020569079079817,
    'lum': 60.32474192162227,
    'lum_std': 7.537910024242527,
    'red': 0.567051734318277,
    'red_std': 0.0992382006266855,
  })
# ---
